# LABA8

./: .flake8  .gitignore  pyproject.toml
src/laba8/: cli.py
src/laba8/data/: http_client.py
src/laba8/services/: clubs_service.py
