[tool.poetry]
name = "laba8"
version = "0.1.0"
description = ""
authors = ["sokolenok <skls77@mail.ru>"]
readme = "README.md"
packages = [{ include = "laba8", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.14"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
laba8 = "laba8.cli:main"

